# trimiprf_nerfstudio

./: .gitignore  README.md  pyproject.toml
trimiprf/: trimiprf.py  trimiprf_config.py  trimiprf_encoding.py  trimiprf_field.py
